--- a/index.html
+++ b/index.html
@@ -20,3 +20,26 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+<!doctype html>
+<html>
+<head>
+  <title>APA Style Format for Libre Office Writer</title>
+  <meta charset="UTF-8">
+</head>
+
+<body>
+  <div class="header">
+  </div>
+
+  <div class="jumbotron">
+  </div>
+
+  <div class="feature">
+  </div>
+
+  <div class="video">
+  </div>
+  
+</body>
+
+</html>
