--- a/index.html
+++ b/index.html
@@ -23,23 +23,87 @@ SOFTWARE.
 <!doctype html>
 <html>
 <head>
+  <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet">
   <title>APA Style Format for Libre Office Writer</title>
   <meta charset="UTF-8">
 </head>
 
 <body>
+
+  <!-- HEADER section -->
+
   <div class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <h1>APA Style</h1>
+        </div>
+        <div class="col-xs-6 pull-right">
+          <a href="#">DOWNLOAD</a>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- JUMBOTRON section -->
 
   <div class="jumbotron">
+    <div class="container">
+      <img src="http://placehold.it/640x360" />
+    </div>
   </div>
+
+  <!-- FEATURE section -->
 
   <div class="feature">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4">
+          <img src="http://placehold.it/150x100" />
+          <h1>Feature 1</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="col-xs-4">
+          <img src="http://placehold.it/150x100" />
+          <h1>Feature 2</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="col-xs-4">
+          <img src="http://placehold.it/150x100" />
+          <h1>Feature 3</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+      </div>
+    </div>
   </div>
 
+  <!-- VIDEO section -->
+
   <div class="video">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4">
+          <img src="http://placehold.it/320x240" />
+        </div>
+        <div class="col-xs-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </row>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-xs-4">
+        <img src="http://placehold.it/320x240" />
+      </div>
+    </row>
   </div>
-  
+  </div>
+
 </body>
 
 </html>
