--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ SOFTWARE.
   <div class="header">
     <div class="container">
       <div class="row">
-        <div class="col-xs-3">
-          <h1>APA Style</h1>
+        <div class="col-xs-5">
+          <h1>APA Style Format</h1>
         </div>
         <div class="col-xs-6 pull-right">
-          <a href="#">DOWNLOAD</a>
+          <a href="#" class="btn">DOWNLOAD</a>
         </div>
       </div>
     </div>
