--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ SOFTWARE.
           <h1>Feature 1</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <div class="col-xs-4 feature-item">
+        <div class="col-xs-4 whitebox-item">
           <img src="http://placehold.it/150x100" />
           <h1>Feature 2</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <div class="col-xs-4 feature-item">
+        <div class="col-xs-4 whitebox-item">
           <img src="http://placehold.it/150x100" />
           <h1>Feature 3</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -83,7 +83,7 @@ SOFTWARE.
 
   <div class="video">
     <div class="container">
-      <div class="row video-item">
+      <div class="row whitebox-item">
         <div class="col-xs-7">
           <img src="http://placehold.it/320x240" />
         </div>
@@ -93,7 +93,7 @@ SOFTWARE.
       </row>
     </div>
 
-    <div class="row video-item">
+    <div class="row whitebox-item">
       <div class="col-xs-5">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
