Add a missing whitebox-item class on index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ SOFTWARE.
   <div class="feature">
     <div class="container">
       <div class="row">
-        <div class="col-xs-4 feature-item">
+        <div class="col-xs-4 whitebox-item">
           <img src="http://placehold.it/150x100" />
           <h1>Feature 1</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
