--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@ SOFTWARE.
     <div class="container">
       <div class="row">
         <div class="col-xs-4 whitebox-item">
-          <img src="http://placehold.it/150x100" />
-          <h1>Feature 1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <img src="http://Pplacehold.it/150x100" />
+          <h1>Title page</h1>
+          <p>Add your name, school, date, title, etc. on the custom properties of the document and start working right away. The main title will appear on top of every page. You may even use this data on your document.</p>
         </div>
         <div class="col-xs-4 whitebox-item">
           <img src="http://placehold.it/150x100" />
-          <h1>Feature 2</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h1>Table of contents</h1>
+          <p>The table of contents will build itself from the custom APA style headers. No need to keep track of the page number yourself. You can alter the entire structure of the document and you only need to refresh the table of contents to see the changes.</p>
         </div>
         <div class="col-xs-4 whitebox-item">
           <img src="http://placehold.it/150x100" />
-          <h1>Feature 3</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h1>Bibliography</h1>
+          <p>Create a bibliography database and use it to keep your APA style references in order. It's more work at the beginning but it pays in the long run, specially when you have a long document with hundreds of references.</p>
         </div>
       </div>
     </div>
