Fix a typo on a feature section image on index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ SOFTWARE.
     <div class="container">
       <div class="row">
         <div class="col-xs-4 whitebox-item">
-          <img src="http://Pplacehold.it/150x100" />
+          <img src="http://placehold.it/150x100" />
           <h1>Title page</h1>
           <p>Add your name, school, date, title, etc. on the custom properties of the document and start working right away. The main title will appear on top of every page. You may even use this data on your document.</p>
         </div>
