Add actual content to the video section on index.html

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@ SOFTWARE.
           <img src="http://placehold.it/320x240" />
         </div>
         <div class="col-xs-5">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Creating a title page is simple, just add data to the custom fields and see how it works for you. You may use the custom fields on your document. The table of contents will create itself if you use the custom APA style headers.</p>
         </div>
       </row>
     </div>
 
     <div class="row whitebox-item">
       <div class="col-xs-5">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Creating a bibliography database is helpful for future reference and will bring you easy acces to such sources in the future. just like the table of contents, you only need to refresh the bibliography to see the changes.</p>
       </div>
       <div class="col-xs-7">
         <img src="http://placehold.it/320x240" />
