Replace placeholder images on feature section with actual pictures on index.html

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@ SOFTWARE.
     <div class="container">
       <div class="row">
         <div class="col-xs-4 whitebox-item">
-          <img src="http://placehold.it/150x100" />
+          <img src="author.jpg" />
           <h1>Title page</h1>
           <p>Add your name, school, date, title, etc. on the custom properties of the document and start working right away. The main title will appear on top of every page. You may even use this data on your document.</p>
         </div>
         <div class="col-xs-4 whitebox-item">
-          <img src="http://placehold.it/150x100" />
+          <img src="man-writing-books.jpg" />
           <h1>Table of contents</h1>
           <p>The table of contents will build itself from the custom APA style headers. No need to keep track of the page number yourself. You can alter the entire structure of the document and you only need to refresh the table of contents to see the changes.</p>
         </div>
         <div class="col-xs-4 whitebox-item">
-          <img src="http://placehold.it/150x100" />
+          <img src="writer-laptop.jpg" />
           <h1>Bibliography</h1>
           <p>Create a bibliography database and use it to keep your APA style references in order. It's more work at the beginning but it pays in the long run, specially when you have a long document with hundreds of references.</p>
         </div>
