Add the link to the file: apa6.ott on the header section on index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ SOFTWARE.
           <h1>APA Style Format</h1>
         </div>
         <div class="col-xs-6 pull-right">
-          <a href="#" class="btn">DOWNLOAD</a>
+          <a href="apa6.ott" class="btn">DOWNLOAD</a>
         </div>
       </div>
     </div>
