Add video & images replacing placeholder images on index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ SOFTWARE.
 
   <div class="jumbotron">
     <div class="container">
-      <img src="http://placehold.it/640x360" />
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/j7vhqld_p2Y" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
@@ -85,7 +85,7 @@ SOFTWARE.
     <div class="container">
       <div class="row whitebox-item">
         <div class="col-xs-7">
-          <img src="http://placehold.it/320x240" />
+          <img src="table-contents.png" />
         </div>
         <div class="col-xs-5">
           <p>Creating a title page is simple, just add data to the custom fields and see how it works for you. You may use the custom fields on your document. The table of contents will create itself if you use the custom APA style headers.</p>
@@ -98,7 +98,7 @@ SOFTWARE.
         <p>Creating a bibliography database is helpful for future reference and will bring you easy acces to such sources in the future. just like the table of contents, you only need to refresh the bibliography to see the changes.</p>
       </div>
       <div class="col-xs-7">
-        <img src="http://placehold.it/320x240" />
+        <img src="bibliography.png" /> <!-- 320 x 240 -->
       </div>
     </row>
   </div>
